# Delta-em-python

./: .gitignore  Delta.py  Delta.spec  README.md  pyproject.toml
src/delta/: __init__.py  calculator.py  cli.py
tests/: test_cli.py  test_delta.py
